--- a/school-management/src/app/components/header/header.component.html
+++ b/school-management/src/app/components/header/header.component.html
@@ -2,10 +2,11 @@
   <div class="container">
     <!-- Logo Section -->
     <div class="logo">
-      <div class="logo-icon">
+      <!-- <div class="logo-icon">
         ☀️
       </div>
-      <span class="logo-text">{{ 'HEADER.LOGO' | translate }}</span>
+      <span class="logo-text">{{ 'HEADER.LOGO' | translate }}</span> -->
+      <img src="../../../assets/logo.png" alt="">
     </div>
 
     <!-- Navigation Menu -->
