--- a/school-management/src/app/components/contact/contact.component.html
+++ b/school-management/src/app/components/contact/contact.component.html
@@ -52,7 +52,7 @@
 
       <!-- Right Side - Inquiry Form -->
       <div class="inquiry-form">
-        <h3 class="form-title">Inquiry Form</h3>
+        <h3 class="form-title">Contact form</h3>
         
         <!-- Success Message -->
         <div *ngIf="successMessage" class="alert alert-success">
