--- a/school-management/src/app/components/home/home.component.html
+++ b/school-management/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-news-ticker></app-news-ticker>
 <app-hero></app-hero>
 <app-welcome></app-welcome>
 <app-philosophy></app-philosophy>
