--- a/school-management/src/app/components/footer/footer.component.html
+++ b/school-management/src/app/components/footer/footer.component.html
@@ -35,7 +35,7 @@
           <li><a href="#philosophy-section" class="footer-link">{{ 'FOOTER.OUR_PHILOSOPHY' | translate }}</a></li>
           <li><a href="#curriculum-section" class="footer-link">{{ 'FOOTER.CURRICULUM' | translate }}</a></li>
           <li><a href="#experience-section" class="footer-link">{{ 'FOOTER.FACILITIES' | translate }}</a></li>
-          <li><a href="/policies" class="footer-link">{{ 'FOOTER.SCHOOL_POLICIES' | translate }}</a></li>
+          <li><a routerLink="/policies" class="footer-link">{{ 'FOOTER.SCHOOL_POLICIES' | translate }}</a></li>
         </ul>
       </div>
 
